--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
     # hibernate:
       # ddl-auto: create-drop
   messages:
-    basename: exceptions
+    basename: text,exceptions
   h2:
     console:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:./data/h2.db
+    url: jdbc:h2:file:./data/shop.db
     username: admin
     password: admin
     # url: jdbc:postgresql://localhost:5432/shop
