--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -43,6 +43,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>pl.training.orders</groupId>
+            <artifactId>ports</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
