--- a/orders-adapters/pom.xml
+++ b/orders-adapters/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.training.payments</groupId>
+    <groupId>pl.training.orders</groupId>
     <artifactId>adapters</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -27,17 +27,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>pl.training.payments</groupId>
+            <groupId>pl.training.orders</groupId>
             <artifactId>ports</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
