--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -44,8 +44,19 @@
         </dependency>
         <dependency>
             <groupId>pl.training.orders</groupId>
-            <artifactId>ports</artifactId>
+            <artifactId>adapters</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.training.orders</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
