--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,6 @@ spring:
     # username: admin
     # password: admin
     # driver-class-name: org.postgresql.Driver
+logging:
+  level:
+    org.javamoney.moneta.FastMoney: OFF
