--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
