--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,14 @@ spring:
     # username: admin
     # password: admin
     # driver-class-name: org.postgresql.Driver
+  #mongodb:
+  #  embedded:
+  #    version: 3.4.6
+  data:
+    mongodb:
+      username: admin
+      password: admin
+      database: payments
 logging:
   level:
     org.javamoney.moneta.FastMoney: OFF
