--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
   mongo:
     image: mongo
     ports:
-      - "27017:27017"
+      - "20000:27017"
     environment:
-      MONGO_INIT_DB_ROOT_USERNAME: "admin"
-      MONGO_INIT_DB_ROOT_PASSWORD: "admin"
-      MONGO_INIT_DB_ROOT_DATABASE: "payments"
+      MONGO_INITDB_ROOT_USERNAME: "admin"
+      MONGO_INITDB_ROOT_PASSWORD: "admin"
+      MONGO_INITDB_DATABASE: "payments"
+
