--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,11 @@ spring:
       port: 30000
   profiles:
     active: development
+  mail:
+    host: localhost
+    port: 10025
+  thymeleaf:
+    enabled: false
 logging:
   level:
     org.javamoney.moneta.FastMoney: OFF
@@ -36,11 +41,19 @@ time-api:
   endpoint: http://worldtimeapi.org/api/timezone
   timezone: Europe/Warsaw
   token: 1234
+mail:
+  sender: shop@training.pl
+languages: pl
 ---
 spring:
   config:
     activate:
       on-profile: development
+  jms:
+    listener:
+      concurrency: 10
+    pub-sub-domain: true
+
 logging:
   level:
     pl.training.shop: DEBUG
