--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,11 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    ports:
+      - "10000:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+
