--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
-version: '3'
+version: '3.4'
+
+x-common-variables: &kafka-common-variables
+  KAFKA_MIN_INSYNC_REPLICAS: 2
+  KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+  KAFKA_NUM_PARTITIONS: 5
+
 services:
-  database:
-    image: postgres:14.1-alpine
+  postgres:
+    image: postgres
     ports:
       - "5432:5432"
     environment:
@@ -10,7 +16,8 @@ services:
       - POSTGRES_PASSWORD=admin
       - PGDATA=/var/lib/postgresql/data/application
     volumes:
-      - ./data:/var/lib/postgresql/data/application
+      - ./data/postgres:/var/lib/postgresql/data/application
+
   mongo:
     image: mongo
     ports:
@@ -19,28 +26,134 @@ services:
       MONGO_INITDB_ROOT_USERNAME: "admin"
       MONGO_INITDB_ROOT_PASSWORD: "admin"
       MONGO_INITDB_DATABASE: "payments"
+
   mailServer:
     image: djfarrelly/maildev
     command: home/node/bin/maildev --web 8082 --smtp 10025
     ports:
       - "8082:8082"
       - "10025:10025"
-  zookeeper:
-    image: wurstmeister/zookeeper
+
+  zoo1:
+    image: zookeeper
+    restart: "no"
+    hostname: zoo1
+    container_name: zoo1
     ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka
+      - 2181:2181
+    volumes:
+      - ./data/zookeeper1/data:/data
+      - ./data/zookeeper1/datalog:/datalog
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=0.0.0.0:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+
+  zoo2:
+    image: zookeeper
+    restart: "no"
+    hostname: zoo2
+    container_name: zoo2
+    ports:
+      - 2182:2181
+    volumes:
+      - ./data/zookeeper2/data:/data
+      - ./data/zookeeper2/datalog:/datalog
+    environment:
+      ZOO_MY_ID: 2
+      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=0.0.0.0:2888:3888;2181 server.3=zoo3:2888:3888;2181
+
+  zoo3:
+    image: zookeeper
+    restart: "no"
+    hostname: zoo3
+    container_name: zoo3
+    ports:
+      - 2183:2181
+    volumes:
+      - ./data/zookeeper3/data:/data
+      - ./data/zookeeper3/datalog:/datalog
+    environment:
+      ZOO_MY_ID: 3
+      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=0.0.0.0:2888:3888;2181
+
+  broker1:
+    image: confluentinc/cp-kafka
+    restart: "no"
+    hostname: broker1
+    container_name: broker1
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
     ports:
       - "9092:9092"
+    volumes:
+      - ./data/kafka1/data:/var/lib/kafka/data
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      <<: *kafka-common-variables
+      KAFKA_CLUSTER_ID: test-kafka-cluster
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:2181,zoo2:2181,zoo3:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CLIENT:PLAINTEXT,INTER_BROKER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: CLIENT://localhost:9092,INTER_BROKER://broker1:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTER_BROKER
+
+  broker2:
+    image: confluentinc/cp-kafka
+    restart: "no"
+    hostname: broker2
+    container_name: broker2
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+    ports:
+      - "9094:9094"
+    volumes:
+      - ./data/kafka2/data:/var/lib/kafka/data
+    environment:
+      <<: *kafka-common-variables
+      KAFKA_CLUSTER_ID: test-kafka-cluster
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:2181,zoo2:2181,zoo3:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CLIENT:PLAINTEXT,INTER_BROKER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: CLIENT://localhost:9094,INTER_BROKER://broker2:9095
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTER_BROKER
+
+  broker3:
+    image: confluentinc/cp-kafka
+    restart: "no"
+    hostname: broker3
+    container_name: broker3
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+    ports:
+      - "9096:9096"
+    volumes:
+      - ./data/kafka3/data:/var/lib/kafka/data
+    environment:
+      <<: *kafka-common-variables
+      KAFKA_CLUSTER_ID: test-kafka-cluster
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:2181,zoo2:2181,zoo3:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CLIENT:PLAINTEXT,INTER_BROKER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: CLIENT://localhost:9096,INTER_BROKER://broker3:9097
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTER_BROKER
+
   kafka-ui:
     image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    depends_on:
+      - broker1
+      - broker2
+      - broker3
     ports:
       - "10000:8080"
+    restart: "no"
     environment:
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-
+      - KAFKA_CLUSTERS_0_NAME=test-kafka-cluster
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker1:9093
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zoo1:2181
+      - KAFKA_CLUSTERS_0_READONLY=true
